--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<video style="background-color: rgb(0, 0, 0); width: 100%; height: 100%; display: block;" webkit-playsinline="" x-webkit-airplay="" preload="auto" muted="" data-role="txp_video_tag" src="movie.mp4"></video>
+<video width="320" height="240" x5-video-player-type="h5-page" controls autoplay style="background-color: rgb(0, 0, 0);display: block;" webkit-playsinline="" x-webkit-airplay="" preload="auto" muted="" data-role="txp_video_tag" src="movie.mp4"></video>
 
 </body>
 </html>
