--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<video width="800" height="600" autoplay x5-video-player-type="h5-page" style="position: absolute;display: inline;" preload="auto" data-role="txp_video_tag" src="movie.mp4"></video>
+<video width="1000" height="750" controls autoplay x5-video-player-type="h5-page" playsinline="true" webkit-playsinline="true" style="position: absolute;display: inline;" preload="auto" data-role="txp_video_tag" src="movie.mp4"></video>
 
 </body>
 </html>
