去掉私有属性

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<video width="1000" height="750" autoplay controls x5-video-player-type="h5-page" playsinline="true" webkit-playsinline="true" style="position: absolute;" preload="auto" src="movie.mp4"></video>
+<video width="1000" height="750" autoplay controls playsinline="true" webkit-playsinline="true" style="position: absolute;" preload="auto" src="movie.mp4"></video>
 
 </body>
 </html>
