add JS geolocation

--- a/test_for_JS/test_alert+confirm+prompt.html
+++ b/test_for_JS/test_alert+confirm+prompt.html
@@ -9,9 +9,10 @@
     JS Test Page
 </p>
 <p>JS 弹框测试：</p>
-<a href="https://halo-lg.github.io/test_for_JS/test_alert.html">alert测试</a>
-<a href="https://halo-lg.github.io/test_for_JS/test_confirm.html">confirm测试</a>
-<a href="https://halo-lg.github.io/test_for_JS/test_prompt.html">prompt测试</a>
+<a href="https://halo-lg.github.io/test_for_JS/test_alert.html">alert弹框测试</a>
+<a href="https://halo-lg.github.io/test_for_JS/test_confirm.html">confirm弹框测试</a>
+<a href="https://halo-lg.github.io/test_for_JS/test_prompt.html">prompt弹框测试</a>
+<a href="https://halo-lg.github.io/test_for_JS/test_geolocation.html">地理位置弹框测试</a>
 <br><br><br>
 </body>
 </html>
